--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "prepublish": "webpack --progress",
+    "prepare": "npm run build",
     "clean": "rm -rf ./lib",
     "build": "webpack --progress",
     "lint": "eslint '@(src|test|example)/**/*.js?'",
